--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@zeit/next-sass": "^0.2.0",
     "apollo-boost": "^0.1.3",
     "graphql": "0.13.2",
     "isomorphic-unfetch": "2.0.0",
     "next": "^6.1.1",
+    "node-sass": "^4.9.3",
     "prop-types": "15.6.1",
     "react": "^16.4.1",
     "react-apollo": "2.1.0",
