--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@svgr/cli": "^2.3.0",
     "@zeit/next-sass": "^0.2.0",
     "apollo-boost": "^0.1.3",
     "autoprefixer": "^9.1.3",
